Fixed Currency Text Alignment

--- a/src/themes/sap_fiori_3/library.css
+++ b/src/themes/sap_fiori_3/library.css
@@ -324,6 +324,10 @@
 .kellojoMCurrency .sapUiUfdCurrencyCurrency {
   width: unset;
 }
+.kellojoMCurrency .sapUiUfdCurrencyValue,
+.kellojoMCurrency .sapUiUfdCurrencyCurrency {
+  vertical-align: bottom;
+}
 .kellojoMCurrency-flg-negative {
   color: #bb0000;
 }
