--- a/src/themes/sap_fiori_3/src/Currency.less
+++ b/src/themes/sap_fiori_3/src/Currency.less
@@ -4,6 +4,10 @@
     .sapUiUfdCurrencyCurrency {
         width: unset;
     }
+
+    .sapUiUfdCurrencyValue, .sapUiUfdCurrencyCurrency {
+        vertical-align: bottom;
+    }
     
     color: @success;
 }
